alignment issue fix

--- a/src/app/shared/products/products.component.scss
+++ b/src/app/shared/products/products.component.scss
@@ -1,7 +1,7 @@
 .products-container { display: flex; flex-wrap: wrap; width: 100%; height: 95vh; overflow: scroll;}
-.no-image { background-color: rgb(186 223 245 / 70%); height: 120px; width: 120px; margin: 10px 0 10px 40px; display: flex; flex-direction: column; text-align: center; scrollbar-width: none; overflow-x: hidden; overflow-y: auto; border-radius: 10px; font-family: sans-serif; color: white;}
-.image-box { margin: 10px 0 10px 40px; position: relative;}
-.layer { background-color: rgb(186 223 245 / 70%); position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex;  flex-direction: column;  text-align: center;  font-size: 15px;  scrollbar-width: none;  overflow-x: hidden;   overflow-y: auto;  font-family: sans-serif;   color: white;}
+.no-image { background-color: rgb(186 223 245 / 70%); height: 120px; width: 120px; margin: 10px 0 10px 65px; display: flex; flex-direction: column; text-align: center; scrollbar-width: none; overflow-x: hidden; overflow-y: auto; border-radius: 10px; font-family: sans-serif; color: white;}
+.image-box { margin: 10px 0 10px 65px; position: relative;}
+.layer { background-color: rgb(186 223 245 / 70%); border-radius: 10px; position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex;  flex-direction: column;  text-align: center;  font-size: 15px;  scrollbar-width: none;  overflow-x: hidden;   overflow-y: auto;  font-family: sans-serif;   color: white;}
 span { margin-top: 12px; margin-bottom: 4px;}
 img { border-radius: 10px; height: 120px; width: 120px;}
 .image-box:hover { cursor: pointer;}
