--- a/src/app/shared/receipt/receipt.component.scss
+++ b/src/app/shared/receipt/receipt.component.scss
@@ -4,7 +4,7 @@
 .sale-date { font-weight: 600; margin: 5px; font-size: 14px; margin-left: 30px;}
 .order-details-list { margin-top: 5px; font-weight: 600; max-height: 90px; overflow-y: scroll;  min-height: 65px;}
 h2.sale-no { text-align: center; margin-top: 0px; font-size: 20px;}
-.order-list { margin-left: 30px;}
+.order-list-reciept { margin-left: 30px;}
 .item-no { width: 10%;}
 .item-name { width: 50%;}
 .item-quantity {  width: 10%;}
